--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "eslint-plugin-unicorn": "^5.0.0",
     "esm": "^3.0.51",
     "karma": "^1.1.0",
+    "karma-browserstack-launcher": "^1.0.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-html2js-preprocessor": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
+    "lie": "^3.3.0",
     "minimist": "^1.2.0",
     "mocha": "^4.1.0",
     "np": "^3.0.4",
